# lewm-rs

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PRD.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.codex/skills/: _index.md  burn-modules.md  crate-layering.md  determinism-rng.md  hf-jobs-cost.md  parity-testing.md  python-helpers.md  quality-gate.md  release-and-artifacts.md  rfc-adr-process.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  (+1 more)
.ml-intern/: cli_agent_config.json
bench-baselines/: README.md  baselines.json
configs/: pusht.toml  pusht_eval.toml  so100.toml  so100_warmstart.toml
conformance/: README.md  release_blockers.json
crates/lewm-core/: Cargo.toml  README.md
crates/lewm-core/benches/: tensor_ops.rs
crates/lewm-core/src/: ada_ln.rs  config.rs  embedder.rs  errors.rs  export.rs  import.rs  init.rs  jepa.rs  lib.rs  mlp.rs  predictor.rs  rng.rs  tensor_ops.rs  vit.rs
crates/lewm-core/src/losses/: collapse.rs  mod.rs  prediction.rs  sigreg.rs
crates/lewm-core/tests/: ada_ln_shape.rs  burn_compat.rs  embedder_shape.rs  export.rs  mlp_shape.rs  parity_action_encoder.rs  parity_encoder.rs  parity_fixture.rs  parity_init.rs  parity_pred_proj.rs  parity_predictor.rs  parity_sigreg.rs  predictor_shape.rs  vit_shape.rs
crates/lewm-core/tests/support/: mod.rs
crates/lewm-data/: Cargo.toml  README.md
crates/lewm-data/src/: batch.rs  errors.rs  lib.rs  prefetch.rs  pusht.rs  so100.rs  stats.rs
crates/lewm-data/src/transform/: action.rs  image.rs  mod.rs
crates/lewm-gpu/: Cargo.toml  README.md
crates/lewm-gpu/src/: lib.rs
crates/lewm-hub/: Cargo.toml  README.md
crates/lewm-hub/src/: client.rs  cost_ledger.rs  errors.rs  lib.rs  model_card.rs  upload.rs
crates/lewm-infer/: Cargo.toml  README.md
crates/lewm-infer/src/: errors.rs  eval.rs  lib.rs  plan.rs  preprocess.rs
crates/lewm-infer/src/export/: lowering.rs  mod.rs  onnx.rs  verifier.rs
crates/lewm-infer/src/runner/: burn_runner.rs  loader.rs  mod.rs  tract_nnef_runner.rs  tract_onnx_runner.rs  traits.rs
crates/lewm-infer/tests/: burn_runner_contract.rs  cli_contract.rs  runner_contract.rs
crates/lewm-plan/: Cargo.toml  README.md
crates/lewm-plan/src/: cem.rs  errors.rs  lib.rs  pusht_eval.rs  reports.rs  so100_eval.rs
crates/lewm-telemetry/: Cargo.toml  README.md
crates/lewm-telemetry/src/: collapse.rs  errors.rs  facade.rs  lib.rs  logs.rs  metrics.rs  nvtx_layer.rs  otlp.rs  spans.rs  system.rs  tensorboard.rs  tracker.rs
crates/lewm-telemetry/tests/: otlp_endpoint_smoke.rs
crates/lewm-train/: Cargo.toml  README.md  build.rs
crates/lewm-train/src/: checkpoint.rs  config.rs  eval.rs  lib.rs  mixed_precision.rs  optim.rs  pusht_full.rs  pusht_lewm.rs  resume.rs  schedule.rs  step.rs  trainer.rs  warmstart.rs
docs/: README.md  book.toml
jobs/: short_pusht.yaml  short_so100.yaml  smoke_pusht.yaml  smoke_pusht_cuda.yaml  smoke_so100.yaml  train_pusht.yaml  train_pusht_source.yaml  train_so100.yaml  train_so100_warmstart.yaml
paper/: lewm-rs.md
python/: Makefile  build_parity_fixture.py  compute_so100_stats.py  compute_stats.py  convert_reference.py  cost_ledger.py  decode_so100_to_h5.py  eval_compare.py  export_onnx.py  hf_pricing.py  param_name_map.py  plot_curves.py  pusht_runner.py  pyproject.toml  upload_checkpoints.py  verify_conversion.py  verify_onnx.py
python/model_cards/: README_pusht.md  README_so100.md
python/tests/: test_audit_pusht_full_safetensors.py  test_audit_pusht_warmstart_sources.py  test_check_f1_source_build_dry_run_report.py  test_check_full_pusht_contract_smoke_report.py  test_check_phase_a_approval.py  test_check_phase_a_handoff.py  test_check_pusht_full_safetensors_hub_audit_report.py  test_check_pusht_onnx_export_metadata.py  test_check_pusht_release_wording.py  test_check_pusht_warmstart_hub_audit_report.py  test_check_pusht_warmstart_source_smoke_report.py  test_check_release_blockers.py  test_check_runtime_image_publish_report.py  test_check_warmstart_source.py  test_convert_reference.py  test_decode_so100_to_h5.py  test_export_onnx.py  test_f1_export_pusht_onnx.py  test_full_pusht_contract_smoke.py  test_launch_hf_job.py  test_param_name_map.py  test_pusht_runner.py  test_pusht_warmstart_source_smoke.py  test_upload_checkpoints.py  test_upload_model_cards.py  test_verify_conversion.py  test_verify_runtime_image.py
reports/: cost.md  f1_source_build_dry_run.json  full_burn_jepa_training_gap.md  full_pusht_contract_smoke.json  gpu_inference.md  inference.md  phase_a_approval.json  phase_a_handoff.json  pusht_full_safetensors_hub_audit.json  pusht_onnx_export.md  pusht_training.md  pusht_warmstart_hub_audit.json  pusht_warmstart_source_smoke.json  release_checklist.md  runtime_image_publish.md  so100_training.md  so100_warmstart.md
scripts/: audit_pusht_full_safetensors.py  audit_pusht_warmstart_sources.py  bench_to_report.py  build_reproducible_release.sh  check_f1_source_build_dry_run_report.py  check_full_pusht_contract_smoke_report.py  check_hub_artifacts.py  check_jobs.py  check_layers.py  check_nondet.py  check_otel_infra.py  check_phase_a_approval.py  check_phase_a_handoff.py  check_pusht_full_safetensors_hub_audit_report.py  check_pusht_onnx_export_metadata.py  check_pusht_release_wording.py  check_pusht_warmstart_hub_audit_report.py  check_pusht_warmstart_source_smoke_report.py  check_release_blockers.py  check_runtime_image_publish_report.py  check_secrets.py  check_specs.py  check_train_so100_job.py  check_warmstart_source.py  f1_export_pusht_onnx.py  full_pusht_contract_smoke.py  launch_hf_job.py  otel_smoke.py  pusht_warmstart_source_smoke.py  run_local.sh  sbom.py  upload_model_cards.py  verify_reproducible_release.sh  verify_runtime_image.py
specs/: README.md  TECHNICAL_SPECIFICATION.md  glossary.md  traceability-matrix.md
(+125 files in other folders)
