[package]
name = "lewm-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Core LeWM model architecture, losses, and tensor contracts."

[lib]
path = "src/lib.rs"

[features]
default = []
parity-fixtures = []
slow-tests = []

[dependencies]
blake3 = { workspace = true }
burn = { workspace = true }
libm = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
burn-autodiff = { workspace = true }
burn-ndarray = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true }
proptest = { workspace = true }
toml = { workspace = true }

[[bench]]
name = "tensor_ops"
harness = false

[lints]
workspace = true
