[package]
name = "lewm-data"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Dataset loading, preprocessing, batching, and streaming utilities."

[lib]
path = "src/lib.rs"

[features]
default = []
slow-tests = []

[dependencies]
lewm-core = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
