[package]
name = "lewm-data"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Dataset loading, preprocessing, batching, and streaming utilities."

[lib]
path = "src/lib.rs"

[features]
default = []
slow-tests = []

[dependencies]
blake3 = { workspace = true }
hdf5-metno = { workspace = true }
lewm-core = { workspace = true }
ndarray = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tempfile = "3"

[lints]
workspace = true
