[package]
name = "lewm-hub"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Hugging Face Hub upload, model-card, artifact, and cost-ledger helpers."

[lib]
path = "src/lib.rs"

[features]
default = []
python-bridge = []
slow-tests = []

[dependencies]
base64 = { workspace = true }
lewm-core = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
