[package]
name = "lewm-infer"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Tract CPU inference runners and planning demo CLI."

[lib]
path = "src/lib.rs"

[[bin]]
name = "lewm-infer"
path = "src/bin/lewm-infer.rs"

[features]
default = ["tract-onnx", "tract-nnef", "burn-cpu"]
tract-onnx = ["dep:tract-onnx", "dep:tract-linalg"]
tract-nnef = ["dep:tract-nnef", "dep:tract-linalg"]
# Burn-direct CPU inference via `burn-ndarray`. Always-on by default so the
# `eval` and `--backend burn-cpu` paths work without extra build flags.
burn-cpu = ["dep:burn-ndarray"]
# Burn-direct GPU inference via `burn-cuda`. Opt-in because it requires CUDA
# toolkit and runtime libraries to be installed on the build host.
burn-cuda = ["dep:burn-cuda"]
# Legacy alias for the Burn-direct path; kept for backwards compatibility with
# external scripts that pass `--features burn-direct`.
burn-direct = ["burn-cpu"]
slow-tests = []

[dependencies]
burn = { workspace = true }
burn-ndarray = { workspace = true, optional = true }
burn-cuda = { workspace = true, optional = true }
clap = { workspace = true }
image = { workspace = true, features = ["jpeg", "png"] }
lewm-core = { workspace = true }
lewm-telemetry = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tract-onnx = { workspace = true, optional = true }
tract-nnef = { workspace = true, optional = true }
tract-linalg = { workspace = true, optional = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
insta = { workspace = true }
prost = "0.11"
proptest = { workspace = true }
tar = "0.4"

[lints]
workspace = true
