[package]
name = "lewm-infer"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Tract CPU inference runners and planning demo CLI."

[lib]
path = "src/lib.rs"

[[bin]]
name = "lewm-infer"
path = "src/bin/lewm-infer.rs"

[features]
default = ["tract-onnx", "tract-nnef", "burn-cpu"]
tract-onnx = ["dep:tract-onnx", "dep:tract-linalg"]
tract-nnef = ["dep:tract-nnef", "dep:tract-linalg"]
# Burn-direct CPU inference via `burn-ndarray`. Always-on by default so the
# `eval` and `--backend burn-cpu` paths work without extra build flags.
#
# GPU backends (burn-cuda, burn-wgpu, ...) deliberately live in the separate
# `lewm-gpu` crate per RFC 0007: this crate stays free of CUDA / autodiff /
# NVML dependencies so it can be built on minimal CI runners and edge hosts.
burn-cpu = ["dep:burn-ndarray"]
# Legacy alias for the Burn-direct path; kept for backwards compatibility with
# external scripts that pass `--features burn-direct`.
burn-direct = ["burn-cpu"]
slow-tests = []

[dependencies]
burn = { workspace = true }
burn-ndarray = { workspace = true, optional = true }
clap = { workspace = true }
image = { workspace = true, features = ["jpeg", "png"] }
lewm-core = { workspace = true }
lewm-telemetry = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tract-onnx = { workspace = true, optional = true }
tract-nnef = { workspace = true, optional = true }
tract-linalg = { workspace = true, optional = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
insta = { workspace = true }
prost = "0.14"
proptest = { workspace = true }
tar = "0.4"

[lints]
workspace = true
