[package]
name = "lewm-telemetry"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Telemetry facade, structured logging, and experiment metrics export."

[lib]
path = "src/lib.rs"

[features]
default = []
nvtx = ["dep:nvtx", "dep:tracing", "dep:tracing-subscriber"]
slow-tests = []

[dependencies]
lewm-core = { workspace = true }
nvtx = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
