[package]
name = "lewm-telemetry"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Telemetry facade, structured logging, and experiment metrics export."

[lib]
path = "src/lib.rs"

[features]
default = []
slow-tests = []

[dependencies]
lewm-core = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
