[package]
name = "lewm-telemetry"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Telemetry facade, structured logging, and experiment metrics export."

[lib]
path = "src/lib.rs"

[features]
default = []
nvtx = ["dep:nvtx"]
nvml = ["dep:nvml-wrapper"]
slow-tests = []

[dependencies]
chrono = { workspace = true }
lewm-core = { workspace = true }
nvtx = { workspace = true, optional = true }
nvml-wrapper = { workspace = true, optional = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
regex = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
