[package]
name = "lewm-train"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Training loops, checkpointing, resume handling, and train CLI."

[lib]
path = "src/lib.rs"

[[bin]]
name = "lewm-train"
path = "src/bin/lewm-train.rs"

[[bin]]
name = "lewm-reference-record"
path = "src/bin/lewm-reference-record.rs"

[features]
default = ["cuda"]
cuda = []
cpu-only = []
metal = []
slow-tests = []

[dependencies]
blake3 = { workspace = true }
burn-core = { workspace = true, features = ["std"] }
burn-ndarray = { workspace = true }
burn-autodiff = { workspace = true }
burn-optim = { workspace = true }
clap = { workspace = true }
lewm-core = { workspace = true }
lewm-data = { workspace = true }
lewm-hub = { workspace = true }
lewm-plan = { workspace = true }
lewm-telemetry = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tempfile = "3"

[lints]
workspace = true
